# training_templates

./: .gitignore  README.md  dev_notebook.py  pyproject.toml  requirements.txt
.github/workflows/: on_pull_request.yml  on_release.yml
examples/: scikit_learn_classification.py
tests/: conftest.py  data_loading_utils.py  load_sample_features.py  test_data_utils.py  test_trainers.py  test_tuners.py  test_util_funcs.py  test_utils.py
tests/test_classification_templates/: test_base_classification_templates  test_base_classification_templates.py  test_base_template.py  test_base_templates.py  test_child_classification_templates.py  test_xgboost_hyperopt_template.py
training_templates/: __init__.py  config.py  constants.py  data_utils.py  metrics.py  mlflow.py  sklearn_templates.py  utils.py
training_templates/data/: sample_features.csv
training_templates/mlflow_utils/: __init__.py  decorators.py  mixins.py
training_templates/scikit_learn_templates/: base_templates.py  random_forest_hyperopt_template.py  xgboost_hyperopt_template.py
training_templates/trainers/: sklearn.py  utils.py
training_templates/tuners/: __init__.py  formatters.py  hyperopt.py
