[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "training-templates"
dynamic = ["version"]
description = "A collection of templated workflows for machine learning model training with hyperopt and mlflow integration."
readme = "README.md"
dependencies = ["scikit-learn>=1.0", "pandas>=1.0", "mlflow-skinny>=2.0", "xgboost>=1.0"]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
version = {file = "training_templates/VERSION"}

[tool.setuptools.package-data]
"training_templates" = ["data/*.csv"]

# https://pypi.org/project/pip-tools/
# https://hynek.me/til/pip-tools-and-pyproject-toml/
[project.optional-dependencies]
local = ["pyspark>=3.0", "delta-spark>=2.0", "mlflow>=2.0", "hyperopt"]
test = ["pytest>=7.0", "coverage[toml]", "pytest-cov", "black", "mypy", "Flake8-pyproject"]

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
ignore = ['E501']
per-file-ignores = [
    '__init__.py:F401',
]